[gd_scene load_steps=8 format=1]

[ext_resource path="res://menu/menu.gd" type="Script" id=1]
[ext_resource path="res://art/backgrounds/menu_bg1.jpg" type="Texture" id=2]
[ext_resource path="res://fonts/sector50.tres" type="DynamicFont" id=3]
[ext_resource path="res://fonts/sector12.tres" type="DynamicFont" id=4]
[ext_resource path="res://fonts/radiostars20.tres" type="DynamicFont" id=5]
[ext_resource path="res://fonts/radiostars30.tres" type="DynamicFont" id=6]
[ext_resource path="res://menu/remap.gd" type="Script" id=7]

[node name="Menu" type="CanvasLayer"]

process/pause_mode = 2
layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )
script/script = ExtResource( 1 )

[node name="PauseBG" type="Sprite" parent="."]

visibility/light_mask = 0
texture = ExtResource( 2 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1280, 720 )
__meta__ = {
"_edit_lock_": true
}

[node name="StartBG" type="Sprite" parent="."]

visibility/opacity = 0.7
visibility/light_mask = 0
texture = ExtResource( 2 )
centered = false
region = true
region_rect = Rect2( 0, 0, 1280, 720 )
__meta__ = {
"_edit_lock_": true
}

[node name="Title" type="Label" parent="."]

anchor/left = 3
anchor/top = 3
anchor/right = 3
anchor/bottom = 3
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 640.0
margin/top = 299.0
margin/right = -640.0
margin/bottom = 205.0
custom_fonts/font = ExtResource( 3 )
custom_colors/font_color = Color( 0.529412, 0.639216, 0.72549, 1 )
custom_colors/font_color_shadow = Color( 0.0799561, 0.238066, 0.511719, 1 )
custom_constants/shadow_offset_x = 4
text = "STAR PATROL"
align = 1
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="ver" type="Label" parent="."]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 3
margin/left = 0.0
margin/top = 690.0
margin/right = 1280.0
margin/bottom = 720.0
custom_fonts/font = ExtResource( 4 )
custom_colors/font_color = Color( 0.529412, 0.639216, 0.72549, 1 )
custom_colors/font_color_shadow = Color( 0.0799561, 0.238066, 0.511719, 1 )
custom_constants/shadow_offset_x = 1
custom_constants/shadow_offset_y = 1
text = "_0.1_"
align = 2
valign = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Instructions" type="VBoxContainer" parent="."]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 179.0
margin/right = 1280.0
margin/bottom = 311.0
alignment = 0

[node name="Line0" type="Label" parent="Instructions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 25.0
custom_fonts/font = ExtResource( 5 )
text = "Speed up with ->"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Line1" type="Label" parent="Instructions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 29.0
margin/right = 1280.0
margin/bottom = 54.0
custom_fonts/font = ExtResource( 5 )
text = "Slow down with <-"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Line2" type="Label" parent="Instructions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 58.0
margin/right = 1280.0
margin/bottom = 83.0
custom_fonts/font = ExtResource( 5 )
text = "Fire with X"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Line3" type="Label" parent="Instructions"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 87.0
margin/right = 1280.0
margin/bottom = 112.0
custom_fonts/font = ExtResource( 5 )
text = "Jump with Z"
align = 1
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1
__meta__ = {
"_edit_lock_": true
}

[node name="Menu" type="VBoxContainer" parent="."]

focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 460.0
margin/top = 286.0
margin/right = 820.0
margin/bottom = 705.0
alignment = 0

[node name="StartButton" type="Button" parent="Menu"]

rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 360.0
margin/bottom = 60.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Start"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="RestartButton" type="Button" parent="Menu"]

visibility/visible = false
rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 47.0
margin/right = 360.0
margin/bottom = 107.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Restart"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="InstructionsButton" type="Button" parent="Menu"]

rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 64.0
margin/right = 360.0
margin/bottom = 124.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Instructions"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="OptionsButton" type="Button" parent="Menu"]

rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 128.0
margin/right = 360.0
margin/bottom = 188.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Options"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="OptionsReturnButton" type="Button" parent="Menu"]

visibility/visible = false
rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 70.0
margin/right = 360.0
margin/bottom = 130.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Return"
flat = false

[node name="OptionsFullScreenButton" type="Button" parent="Menu"]

visibility/visible = false
rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 70.0
margin/right = 360.0
margin/bottom = 130.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Full Screen"
flat = false

[node name="OptionsMusicButton" type="Button" parent="Menu"]

visibility/visible = false
rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 70.0
margin/right = 360.0
margin/bottom = 130.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Music Volume"
flat = false

[node name="OptionsSfxButton" type="Button" parent="Menu"]

visibility/visible = false
rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 70.0
margin/right = 360.0
margin/bottom = 130.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Sfx Volume"
flat = false

[node name="OptionsRemapButton" type="Button" parent="Menu"]

visibility/visible = false
rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 141.0
margin/right = 360.0
margin/bottom = 201.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Remap Keys"
flat = false

[node name="OptionsRemapReturnButton" type="Button" parent="Menu"]

visibility/visible = false
rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 141.0
margin/right = 360.0
margin/bottom = 201.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Return"
flat = false

[node name="Keymap" type="VBoxContainer" parent="Menu"]

visibility/visible = false
rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = false
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 192.0
margin/right = 360.0
margin/bottom = 444.0
alignment = 0
script/script = ExtResource( 7 )

[node name="speedup" type="Button" parent="Menu/Keymap"]

rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 360.0
margin/bottom = 60.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Speedup"
flat = false

[node name="key" type="Label" parent="Menu/Keymap/speedup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 360.0
margin/bottom = 14.0
custom_fonts/font = ExtResource( 4 )
text = "key"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="joy" type="Label" parent="Menu/Keymap/speedup"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 38.0
margin/right = 360.0
margin/bottom = 61.0
custom_fonts/font = ExtResource( 4 )
text = "key"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="slowdown" type="Button" parent="Menu/Keymap"]

rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 64.0
margin/right = 360.0
margin/bottom = 124.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Slowdown"
flat = false

[node name="key" type="Label" parent="Menu/Keymap/slowdown"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 360.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "key"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="joy" type="Label" parent="Menu/Keymap/slowdown"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 38.0
margin/right = 360.0
margin/bottom = 76.0
custom_fonts/font = ExtResource( 4 )
text = "key"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="jump" type="Button" parent="Menu/Keymap"]

rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 128.0
margin/right = 360.0
margin/bottom = 188.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Slowdown"
flat = false

[node name="key" type="Label" parent="Menu/Keymap/jump"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 360.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "key"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="joy" type="Label" parent="Menu/Keymap/jump"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 38.0
margin/right = 360.0
margin/bottom = 76.0
custom_fonts/font = ExtResource( 4 )
text = "key"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="fire" type="Button" parent="Menu/Keymap"]

rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 192.0
margin/right = 360.0
margin/bottom = 252.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Slowdown"
flat = false

[node name="key" type="Label" parent="Menu/Keymap/fire"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 0.0
margin/right = 360.0
margin/bottom = 23.0
custom_fonts/font = ExtResource( 4 )
text = "key"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="joy" type="Label" parent="Menu/Keymap/fire"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 0
margin/left = 0.0
margin/top = 38.0
margin/right = 360.0
margin/bottom = 76.0
custom_fonts/font = ExtResource( 4 )
text = "key"
align = 2
percent_visible = 1.0
lines_skipped = 0
max_lines_visible = -1

[node name="CreditsButton" type="Button" parent="Menu"]

rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 192.0
margin/right = 360.0
margin/bottom = 252.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Credits"
flat = false
__meta__ = {
"_edit_lock_": true
}

[node name="QuitButton" type="Button" parent="Menu"]

rect/min_size = Vector2( 0, 60 )
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 3
size_flags/vertical = 2
margin/left = 0.0
margin/top = 256.0
margin/right = 360.0
margin/bottom = 316.0
custom_fonts/font = ExtResource( 6 )
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
text = "Quit"
flat = false
__meta__ = {
"_edit_lock_": true
}

[connection signal="pressed" from="Menu/StartButton" to="." method="_on_StartButton_pressed"]

[connection signal="pressed" from="Menu/RestartButton" to="." method="_on_RestartButton_pressed"]

[connection signal="pressed" from="Menu/OptionsButton" to="." method="_on_OptionsButton_pressed"]

[connection signal="pressed" from="Menu/OptionsReturnButton" to="." method="_on_OptionsReturnButton_pressed"]

[connection signal="pressed" from="Menu/OptionsRemapButton" to="." method="_on_OptionsRemapButton_pressed"]

[connection signal="pressed" from="Menu/OptionsRemapReturnButton" to="." method="_on_OptionsRemapReturnButton_pressed"]

[connection signal="pressed" from="Menu/QuitButton" to="." method="_on_QuitButton_pressed"]


